fixed button wrap on mobile

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -225,7 +225,7 @@ textarea{
   font-weight: 600;
   font-size: .8em;
   padding: 18px 36px;
-
+  margin:auto;
   &:hover {
     background:#F5577D;
     color: white;
